--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "axios": "^1.1.2",
-        "bootstrap": "^5.2.3",
+        "bootstrap": "^5.3.1",
         "laravel-mix": "^6.0.6",
         "laravel-vite-plugin": "^0.8.0",
         "resolve-url-loader": "^5.0.0",
@@ -21,6 +21,7 @@
         "vue-loader": "^17.0.1"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^4.3.1",
         "vue": "^3.2.36"
     }
